# Order-Management-System

./: CMakeLists.txt  main.cpp  start.sh
database/: database.cpp  database.h  schema.sql
exchange/include/: exchange1.h  exchange2.h  exchange3.h  iexchange.h
exchange/src/: exchange1.cpp  exchange2.cpp  exchange3.cpp
include/: logger.h  models.h
oadapter/: oadapter.cpp  oadapter.h
oms/: oms.cpp  oms.h
riskmanager/: riskmanager.cpp  riskmanager.h
scripts/: arch_report.py
tests/: oms_test.py
